# termKeeper

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.txt  format.sh  main.cpp
conf/: settings.yaml
config/: settings.yaml
profiles/: linux-mingw-debug  linux-mingw-release  windows-mingw-debug  windows-mingw-release
src/: CMakeLists.txt  Executable.cpp  HotKeyBinder.cpp  logger.cpp  logger.h  main.cpp  mvp.cpp  tk.rc
src/cli/: cli.cpp  cli.h  cliCore.cpp  cliCore.h
src/cli/core/: consolem.cpp  consolem.h  event.cpp  event.h  eventm.cpp  eventm.h  events.h  form.cpp  form.h  inputm.cpp  inputm.h  interface.cpp  interface.h  screen.cpp  screen.h  utils.cpp  utils.h  window.cpp  window.h
src/cli/forms/: form.cpp  form.h  hintsForm.cpp  hintsForm.h  inputForm.cpp  inputForm.h  selectionLIstForm.h  selectionListForm.cpp  selectionListForm.h
src/cli/windows/: borderedWindow.cpp  borderedWindow.h  cacheWindow.cpp  cacheWindow.h  menuWindow.cpp  menuWindow.h  storageWindow.cpp  storageWindow.h
src/clipboardController/: interface.h  windowsClipboardController.cpp  windowsClipboardController.h
src/config/: config.cpp  config.h  configData.cpp  configData.h
src/model/: interface.h  model.cpp  model.h
src/os/clipboardController/: interface.h  windowsClipboardController.cpp  windowsClipboardController.h
src/storage/: cache.cpp  cache.h  storage.cpp  storage.h  xmlCacheManager.cpp  xmlCacheManager.h  xmlStorageManager.cpp  xmlStorageManager.h
src/utils/: finally.h  logger.h  observer.h  pcQueue.h  singleton.h  subject.h  winHotKeyParser.cpp  winHotKeyParser.h
storage/: cache.xml  storage.xml
tools/build-tools/: build_project.sh  functions.sh  setup_venv.sh
